# Progetto-BiM

./: .gitignore  Instruction.md  README.md
.claude/: settings.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/ai/: __init__.py  assistant.py  autonomy.py  intent.py  plan.py
backend/app/api/: __init__.py  deps.py  routes_ai.py  routes_auth.py  routes_profiles.py  schemas.py
backend/app/blender_jobs/: __init__.py  engine.py  headless_engine.py
backend/app/kernel/: __init__.py  component.py  component_definition.py  constraints.py  events.py  model.py  registry.py  value_objects.py
backend/app/rules/: __init__.py  engine.py
backend/app/rules/configs/: example_rules.json
backend/tests/: conftest.py  test_ai_autonomy.py  test_api.py  test_hierarchy.py  test_kernel.py  test_rules.py
blender/: README.md
docs/: example_profile.json  requisiti-progetto-stage-bim-ai.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: AIPanel.jsx  DrawingCanvas.jsx  HierarchyTree.jsx  LeftPanel.jsx  PropertyPanel.jsx  Toolbar.jsx  Viewer3D.jsx
frontend/src/pages/: AuthPage.jsx  ProjectsPage.jsx
frontend/src/store/: useAppStore.js
