[project]
name = "bim-ai-backend"
version = "0.1.0"
description = "Copilota AI per progettazione BIM parametrica — backend FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.11",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.28"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
